--- a/app1/index.html
+++ b/app1/index.html
@@ -4,5 +4,7 @@
       <h1>Welcome to Stack Simplify - App Version - V1 </h1>
       <h3> DevOps for EKS with AWS Developer Tools</h3>
       <p>Application Name: App1</p>
+
+      test
    </body>
 </html>
