first html pushed

--- a/app1/index.html
+++ b/app1/index.html
@@ -5,6 +5,6 @@
       <h3> DevOps for EKS with AWS Developer Tools</h3>
       <p>Application Name: App1</p>
 
-      test
+      Hello World from Ken42.com
    </body>
 </html>
